display first message as conversation title
